--- a/samples/PluginDemo/res/values-el/strings.xml
+++ b/samples/PluginDemo/res/values-el/strings.xml
@@ -15,61 +15,61 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="menu_add_contact">"Προσθήκη επαφής"</string>
-    <string name="menu_remove_contact">"Διαγραφή επαφής"</string>
-    <string name="menu_block_contact">"Αποκλεισμός"</string>
-    <string name="menu_contact_list">"Λίστα επαφών"</string>
-    <string name="menu_start_chat">"Αποστολή άμεσων μηνυμάτων (IM)"</string>
-    <string name="menu_view_profile">"Πληροφορίες φίλου"</string>
-    <string name="menu_end_conversation">"Τερματισμός συνομιλίας"</string>
-    <string name="menu_switch_chats">"Αλλαγή συζητήσεων"</string>
-    <string name="menu_insert_smiley">"Εισαγωγή εικονιδίων emoticons"</string>
-    <string name="sign_up">"Αποκτήστε νέο λογαριασμό"</string>
-    <string name="check_save_password">"Για την ασφάλειά σας, εάν το τηλέφωνό σας χαθεί ή κλαπεί, μεταβείτε στον ιστότοπο στον υπολογιστή σας και αλλάξτε τον κωδικό πρόσβασης."</string>
-    <string name="buddy_list_title">"Λίστα επαφών - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
-    <string name="label_username">"Όνομα χρήστη:"</string>
-    <string name="ongoing_conversation">"Συνομιλίες (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
-    <string name="contact_profile_title">"Πληροφορίας επικοινωνίας"</string>
-    <string name="presence_available">"Διαθέσιμος/η"</string>
-    <string name="add_contact_title">"Προσθήκη επαφής"</string>
-    <string name="input_contact_label">"Το ψευδώνυμο του ατόμου που θέλετε να προσθέσετε:"</string>
-    <string name="invite_label">"Προσθήκη φίλου"</string>
+    <string name="menu_add_contact" msgid="1577617821180977339">"Προσθήκη επαφής"</string>
+    <string name="menu_remove_contact" msgid="1438737309746209943">"Διαγραφή επαφής"</string>
+    <string name="menu_block_contact" msgid="1418576909122458824">"Αποκλεισμός"</string>
+    <string name="menu_contact_list" msgid="7408048984312793527">"Λίστα επαφών"</string>
+    <string name="menu_start_chat" msgid="1942461880426180926">"Αποστολή άμεσων μηνυμάτων (IM)"</string>
+    <string name="menu_view_profile" msgid="4594617426877626560">"Πληροφορίες φίλου"</string>
+    <string name="menu_end_conversation" msgid="215067667186746690">"Τερματισμός συνομιλίας"</string>
+    <string name="menu_switch_chats" msgid="4616221788780459133">"Αλλαγή συζητήσεων"</string>
+    <string name="menu_insert_smiley" msgid="6880772056965363205">"Εισαγωγή εικονιδίων emoticons"</string>
+    <string name="sign_up" msgid="3944276728278864333">"Αποκτήστε νέο λογαριασμό"</string>
+    <string name="check_save_password" msgid="3554564072443242779">"Για την ασφάλειά σας, εάν το τηλέφωνό σας χαθεί ή κλαπεί, μεταβείτε στον ιστότοπο στον υπολογιστή σας και αλλάξτε τον κωδικό πρόσβασης."</string>
+    <string name="buddy_list_title" msgid="5837732412636822107">"Λίστα επαφών - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
+    <string name="label_username" msgid="7905168188814604370">"Όνομα χρήστη:"</string>
+    <string name="ongoing_conversation" msgid="9097832769731811986">"Συνομιλίες (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="contact_profile_title" msgid="5203284525412697232">"Πληροφορίας επικοινωνίας"</string>
+    <string name="presence_available" msgid="1184051402868736726">"Διαθέσιμος/η"</string>
+    <string name="add_contact_title" msgid="292217657045373736">"Προσθήκη επαφής"</string>
+    <string name="input_contact_label" msgid="2583915568413164449">"Το ψευδώνυμο του ατόμου που θέλετε να προσθέσετε:"</string>
+    <string name="invite_label" msgid="907494221148096012">"Προσθήκη φίλου"</string>
   <string-array name="smiley_names">
-    <item>"Είμαι χαρούμενος"</item>
-    <item>"Είμαι λυπημένος"</item>
-    <item>"Κλείνω το μάτι"</item>
-    <item>"Κοροϊδεύω"</item>
-    <item>"Είμαι έκπληκτος"</item>
-    <item>"Φιλάω"</item>
-    <item>"Φωνάζω"</item>
-    <item>"Cool"</item>
-    <item>"Κάνω τα λόγια μου πράξη"</item>
-    <item>"Είπα ανοησία"</item>
-    <item>"Ντρέπομαι"</item>
-    <item>"Αγγελούδι"</item>
-    <item>"Δεν έχω αποφασίσει"</item>
-    <item>"Κλαίω"</item>
-    <item>"Δεν αποκαλύπτω τίποτα"</item>
-    <item>"Γελάω"</item>
-    <item>"Είμαι μπερδεμένος"</item>
+    <item msgid="811476776139578986">"Είμαι χαρούμενος"</item>
+    <item msgid="2764363456492352853">"Είμαι λυπημένος"</item>
+    <item msgid="416624764294712159">"Κλείνω το μάτι"</item>
+    <item msgid="7152979870122929989">"Κοροϊδεύω"</item>
+    <item msgid="5784780866600056743">"Είμαι έκπληκτος"</item>
+    <item msgid="5454185003381226454">"Φιλάω"</item>
+    <item msgid="1413668617851210441">"Φωνάζω"</item>
+    <item msgid="232246158381043538">"Cool"</item>
+    <item msgid="2440257511131202785">"Κάνω τα λόγια μου πράξη"</item>
+    <item msgid="4571282940807190133">"Είπα ανοησία"</item>
+    <item msgid="3260099163589753993">"Ντρέπομαι"</item>
+    <item msgid="3042531792218744865">"Αγγελούδι"</item>
+    <item msgid="5227319381647888452">"Δεν έχω αποφασίσει"</item>
+    <item msgid="6952104030566994554">"Κλαίω"</item>
+    <item msgid="9199616532683270084">"Δεν αποκαλύπτω τίποτα"</item>
+    <item msgid="4338502150254517147">"Γελάω"</item>
+    <item msgid="1014703928300075245">"Είμαι μπερδεμένος"</item>
   </string-array>
   <string-array name="smiley_texts">
-    <item>":-)"</item>
-    <item>":-("</item>
-    <item>";-)"</item>
-    <item>":-P"</item>
-    <item>"=-O"</item>
-    <item>":-*"</item>
-    <item>":O"</item>
-    <item>"B-)"</item>
-    <item>":-$"</item>
-    <item>":-!"</item>
-    <item>":-["</item>
-    <item>"O:-)"</item>
-    <item>":-\\"</item>
-    <item>":\'("</item>
-    <item>":-X"</item>
-    <item>":-D"</item>
-    <item>"o_O"</item>
+    <item msgid="6682271134385564589">":-)"</item>
+    <item msgid="5242689844155076377">":-("</item>
+    <item msgid="521632995149320343">";-)"</item>
+    <item msgid="3442897533435789796">":-P"</item>
+    <item msgid="682698687423187022">"=-O"</item>
+    <item msgid="1531701168660725626">":-*"</item>
+    <item msgid="7958357467119008619">":O"</item>
+    <item msgid="4638775565490840154">"B-)"</item>
+    <item msgid="6225545209385623235">":-$"</item>
+    <item msgid="5725425598368680891">":-!"</item>
+    <item msgid="5365880622794795497">":-["</item>
+    <item msgid="8260692119195572132">"O:-)"</item>
+    <item msgid="6879285154649424413">":-\\"</item>
+    <item msgid="554517875650930417">":\'("</item>
+    <item msgid="8169228040168187510">":-X"</item>
+    <item msgid="5444890977206638254">":-D"</item>
+    <item msgid="8814856019116253585">"o_O"</item>
   </string-array>
 </resources>
