--- a/samples/PluginDemo/res/values-nl/strings.xml
+++ b/samples/PluginDemo/res/values-nl/strings.xml
@@ -15,61 +15,61 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="menu_add_contact">"Contact toevoegen"</string>
-    <string name="menu_remove_contact">"Contact verwijderen"</string>
-    <string name="menu_block_contact">"Blokkeren"</string>
-    <string name="menu_contact_list">"Lijst met contacten"</string>
-    <string name="menu_start_chat">"Chat verzenden"</string>
-    <string name="menu_view_profile">"Buddygegevens"</string>
-    <string name="menu_end_conversation">"Conversatie beëindigen"</string>
-    <string name="menu_switch_chats">"Schakelen tussen chats"</string>
-    <string name="menu_insert_smiley">"Emoticons invoegen"</string>
-    <string name="sign_up">"Een nieuw account verkrijgen"</string>
-    <string name="check_save_password">"Als u uw telefoon verliest of als deze wordt gestolen, moet u voor uw veiligheid naar de website gaan op uw computer en uw wachtwoord wijzigen."</string>
-    <string name="buddy_list_title">"Lijst met contacten - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
-    <string name="label_username">"Gebruikersnaam:"</string>
-    <string name="ongoing_conversation">"Conversaties (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
-    <string name="contact_profile_title">"Contactgegevens"</string>
-    <string name="presence_available">"Beschikbaar"</string>
-    <string name="add_contact_title">"Contact toevoegen"</string>
-    <string name="input_contact_label">"Schermnaam van de persoon die u wilt toevoegen:"</string>
-    <string name="invite_label">"Buddy toevoegen"</string>
+    <string name="menu_add_contact" msgid="1577617821180977339">"Contact toevoegen"</string>
+    <string name="menu_remove_contact" msgid="1438737309746209943">"Contact verwijderen"</string>
+    <string name="menu_block_contact" msgid="1418576909122458824">"Blokkeren"</string>
+    <string name="menu_contact_list" msgid="7408048984312793527">"Lijst met contacten"</string>
+    <string name="menu_start_chat" msgid="1942461880426180926">"Chat verzenden"</string>
+    <string name="menu_view_profile" msgid="4594617426877626560">"Buddygegevens"</string>
+    <string name="menu_end_conversation" msgid="215067667186746690">"Conversatie beëindigen"</string>
+    <string name="menu_switch_chats" msgid="4616221788780459133">"Schakelen tussen chats"</string>
+    <string name="menu_insert_smiley" msgid="6880772056965363205">"Emoticons invoegen"</string>
+    <string name="sign_up" msgid="3944276728278864333">"Een nieuw account verkrijgen"</string>
+    <string name="check_save_password" msgid="3554564072443242779">"Als u uw telefoon verliest of als deze wordt gestolen, moet u voor uw veiligheid naar de website gaan op uw computer en uw wachtwoord wijzigen."</string>
+    <string name="buddy_list_title" msgid="5837732412636822107">"Lijst met contacten - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
+    <string name="label_username" msgid="7905168188814604370">"Gebruikersnaam:"</string>
+    <string name="ongoing_conversation" msgid="9097832769731811986">"Conversaties (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="contact_profile_title" msgid="5203284525412697232">"Contactgegevens"</string>
+    <string name="presence_available" msgid="1184051402868736726">"Beschikbaar"</string>
+    <string name="add_contact_title" msgid="292217657045373736">"Contact toevoegen"</string>
+    <string name="input_contact_label" msgid="2583915568413164449">"Schermnaam van de persoon die u wilt toevoegen:"</string>
+    <string name="invite_label" msgid="907494221148096012">"Buddy toevoegen"</string>
   <string-array name="smiley_names">
-    <item>"Blij"</item>
-    <item>"Bedroefd"</item>
-    <item>"Knipoog"</item>
-    <item>"Tong uitsteken"</item>
-    <item>"Verrast"</item>
-    <item>"Kussend"</item>
-    <item>"Schreeuwend"</item>
-    <item>"Cool"</item>
-    <item>"Geldzoeker"</item>
-    <item>"Mond vol tanden"</item>
-    <item>"Beschaamd"</item>
-    <item>"Engel"</item>
-    <item>"Twijfelend"</item>
-    <item>"Huilend"</item>
-    <item>"Lippen op elkaar"</item>
-    <item>"Lachend"</item>
-    <item>"Verward"</item>
+    <item msgid="811476776139578986">"Blij"</item>
+    <item msgid="2764363456492352853">"Bedroefd"</item>
+    <item msgid="416624764294712159">"Knipoog"</item>
+    <item msgid="7152979870122929989">"Tong uitsteken"</item>
+    <item msgid="5784780866600056743">"Verrast"</item>
+    <item msgid="5454185003381226454">"Kussend"</item>
+    <item msgid="1413668617851210441">"Schreeuwend"</item>
+    <item msgid="232246158381043538">"Cool"</item>
+    <item msgid="2440257511131202785">"Geldzoeker"</item>
+    <item msgid="4571282940807190133">"Mond vol tanden"</item>
+    <item msgid="3260099163589753993">"Beschaamd"</item>
+    <item msgid="3042531792218744865">"Engel"</item>
+    <item msgid="5227319381647888452">"Twijfelend"</item>
+    <item msgid="6952104030566994554">"Huilend"</item>
+    <item msgid="9199616532683270084">"Lippen op elkaar"</item>
+    <item msgid="4338502150254517147">"Lachend"</item>
+    <item msgid="1014703928300075245">"Verward"</item>
   </string-array>
   <string-array name="smiley_texts">
-    <item>":-)"</item>
-    <item>":-("</item>
-    <item>";-)"</item>
-    <item>":-P"</item>
-    <item>"Err:502"</item>
-    <item>":-*"</item>
-    <item>":O"</item>
-    <item>"B-)"</item>
-    <item>":-$"</item>
-    <item>":-!"</item>
-    <item>":-["</item>
-    <item>"O:-)"</item>
-    <item>":-\\"</item>
-    <item>":\'("</item>
-    <item>":-X"</item>
-    <item>":-D"</item>
-    <item>"o_O"</item>
+    <item msgid="6682271134385564589">":-)"</item>
+    <item msgid="5242689844155076377">":-("</item>
+    <item msgid="521632995149320343">";-)"</item>
+    <item msgid="3442897533435789796">":-P"</item>
+    <item msgid="682698687423187022">"Err:502"</item>
+    <item msgid="1531701168660725626">":-*"</item>
+    <item msgid="7958357467119008619">":O"</item>
+    <item msgid="4638775565490840154">"B-)"</item>
+    <item msgid="6225545209385623235">":-$"</item>
+    <item msgid="5725425598368680891">":-!"</item>
+    <item msgid="5365880622794795497">":-["</item>
+    <item msgid="8260692119195572132">"O:-)"</item>
+    <item msgid="6879285154649424413">":-\\"</item>
+    <item msgid="554517875650930417">":\'("</item>
+    <item msgid="8169228040168187510">":-X"</item>
+    <item msgid="5444890977206638254">":-D"</item>
+    <item msgid="8814856019116253585">"o_O"</item>
   </string-array>
 </resources>
