--- a/samples/PluginDemo/res/values-pt/strings.xml
+++ b/samples/PluginDemo/res/values-pt/strings.xml
@@ -15,61 +15,61 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="menu_add_contact">"Adicionar contato"</string>
-    <string name="menu_remove_contact">"Excluir contato"</string>
-    <string name="menu_block_contact">"Bloquear"</string>
-    <string name="menu_contact_list">"Lista de contatos"</string>
-    <string name="menu_start_chat">"Enviar mensagem instantânea"</string>
-    <string name="menu_view_profile">"Informações do amigo"</string>
-    <string name="menu_end_conversation">"Encerrar conversa"</string>
-    <string name="menu_switch_chats">"Alternar bate-papos"</string>
-    <string name="menu_insert_smiley">"Inserir emoticons"</string>
-    <string name="sign_up">"Obter uma nova conta"</string>
-    <string name="check_save_password">"Para a sua segurança, se o seu telefone for perdido ou roubado, acesse o site no seu computador e altere a sua senha."</string>
-    <string name="buddy_list_title">"Lista de contatos - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
-    <string name="label_username">"Nome de usuário:"</string>
-    <string name="ongoing_conversation">"Conversas (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
-    <string name="contact_profile_title">"Informações de contato"</string>
-    <string name="presence_available">"Disponível"</string>
-    <string name="add_contact_title">"Adicionar contato"</string>
-    <string name="input_contact_label">"Apelido da pessoa que você deseja adicionar:"</string>
-    <string name="invite_label">"Adicionar amigo"</string>
+    <string name="menu_add_contact" msgid="1577617821180977339">"Adicionar contato"</string>
+    <string name="menu_remove_contact" msgid="1438737309746209943">"Excluir contato"</string>
+    <string name="menu_block_contact" msgid="1418576909122458824">"Bloquear"</string>
+    <string name="menu_contact_list" msgid="7408048984312793527">"Lista de contatos"</string>
+    <string name="menu_start_chat" msgid="1942461880426180926">"Enviar mensagem instantânea"</string>
+    <string name="menu_view_profile" msgid="4594617426877626560">"Informações do amigo"</string>
+    <string name="menu_end_conversation" msgid="215067667186746690">"Encerrar conversa"</string>
+    <string name="menu_switch_chats" msgid="4616221788780459133">"Alternar bate-papos"</string>
+    <string name="menu_insert_smiley" msgid="6880772056965363205">"Inserir emoticons"</string>
+    <string name="sign_up" msgid="3944276728278864333">"Obter uma nova conta"</string>
+    <string name="check_save_password" msgid="3554564072443242779">"Para a sua segurança, se o seu telefone for perdido ou roubado, acesse o site no seu computador e altere a sua senha."</string>
+    <string name="buddy_list_title" msgid="5837732412636822107">"Lista de contatos - <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
+    <string name="label_username" msgid="7905168188814604370">"Nome de usuário:"</string>
+    <string name="ongoing_conversation" msgid="9097832769731811986">"Conversas (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="contact_profile_title" msgid="5203284525412697232">"Informações de contato"</string>
+    <string name="presence_available" msgid="1184051402868736726">"Disponível"</string>
+    <string name="add_contact_title" msgid="292217657045373736">"Adicionar contato"</string>
+    <string name="input_contact_label" msgid="2583915568413164449">"Apelido da pessoa que você deseja adicionar:"</string>
+    <string name="invite_label" msgid="907494221148096012">"Adicionar amigo"</string>
   <string-array name="smiley_names">
-    <item>"Feliz"</item>
-    <item>"Triste"</item>
-    <item>"Piscando"</item>
-    <item>"Mostrando a língua"</item>
-    <item>"Surpreso"</item>
-    <item>"Beijando"</item>
-    <item>"Gritando"</item>
-    <item>"Tranquilo"</item>
-    <item>"Louco por dinheiro"</item>
-    <item>"Falei besteira"</item>
-    <item>"Envergonhado"</item>
-    <item>"Anjo"</item>
-    <item>"Indeciso"</item>
-    <item>"Chorando"</item>
-    <item>"Boca fechada"</item>
-    <item>"Rindo"</item>
-    <item>"Confuso"</item>
+    <item msgid="811476776139578986">"Feliz"</item>
+    <item msgid="2764363456492352853">"Triste"</item>
+    <item msgid="416624764294712159">"Piscando"</item>
+    <item msgid="7152979870122929989">"Mostrando a língua"</item>
+    <item msgid="5784780866600056743">"Surpreso"</item>
+    <item msgid="5454185003381226454">"Beijando"</item>
+    <item msgid="1413668617851210441">"Gritando"</item>
+    <item msgid="232246158381043538">"Tranquilo"</item>
+    <item msgid="2440257511131202785">"Louco por dinheiro"</item>
+    <item msgid="4571282940807190133">"Falei besteira"</item>
+    <item msgid="3260099163589753993">"Envergonhado"</item>
+    <item msgid="3042531792218744865">"Anjo"</item>
+    <item msgid="5227319381647888452">"Indeciso"</item>
+    <item msgid="6952104030566994554">"Chorando"</item>
+    <item msgid="9199616532683270084">"Boca fechada"</item>
+    <item msgid="4338502150254517147">"Rindo"</item>
+    <item msgid="1014703928300075245">"Confuso"</item>
   </string-array>
   <string-array name="smiley_texts">
-    <item>":-)"</item>
-    <item>":-("</item>
-    <item>";-)"</item>
-    <item>":-P"</item>
-    <item>"=-O"</item>
-    <item>":-*"</item>
-    <item>":O"</item>
-    <item>"B-)"</item>
-    <item>":-$"</item>
-    <item>":-!"</item>
-    <item>":-["</item>
-    <item>"O:-)"</item>
-    <item>":-\\"</item>
-    <item>":\'("</item>
-    <item>":-X"</item>
-    <item>":-D"</item>
-    <item>"o_O"</item>
+    <item msgid="6682271134385564589">":-)"</item>
+    <item msgid="5242689844155076377">":-("</item>
+    <item msgid="521632995149320343">";-)"</item>
+    <item msgid="3442897533435789796">":-P"</item>
+    <item msgid="682698687423187022">"=-O"</item>
+    <item msgid="1531701168660725626">":-*"</item>
+    <item msgid="7958357467119008619">":O"</item>
+    <item msgid="4638775565490840154">"B-)"</item>
+    <item msgid="6225545209385623235">":-$"</item>
+    <item msgid="5725425598368680891">":-!"</item>
+    <item msgid="5365880622794795497">":-["</item>
+    <item msgid="8260692119195572132">"O:-)"</item>
+    <item msgid="6879285154649424413">":-\\"</item>
+    <item msgid="554517875650930417">":\'("</item>
+    <item msgid="8169228040168187510">":-X"</item>
+    <item msgid="5444890977206638254">":-D"</item>
+    <item msgid="8814856019116253585">"o_O"</item>
   </string-array>
 </resources>
