--- a/samples/PluginDemo/res/values-sv/strings.xml
+++ b/samples/PluginDemo/res/values-sv/strings.xml
@@ -15,61 +15,61 @@
 -->
 <resources xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="menu_add_contact">"Lägg till kontakt"</string>
-    <string name="menu_remove_contact">"Ta bort kontakt"</string>
-    <string name="menu_block_contact">"Blockera"</string>
-    <string name="menu_contact_list">"Kontaktlista"</string>
-    <string name="menu_start_chat">"Skicka chattmeddelande"</string>
-    <string name="menu_view_profile">"Kompisinfo"</string>
-    <string name="menu_end_conversation">"Avsluta konversation"</string>
-    <string name="menu_switch_chats">"Byt chatt"</string>
-    <string name="menu_insert_smiley">"Infoga uttryckssymboler"</string>
-    <string name="sign_up">"Öppna ett nytt konto"</string>
-    <string name="check_save_password">"Om din telefon blir stulen besöker du webbplatsen via datorn och ändrar lösenordet. Detta är för din egen säkerhet."</string>
-    <string name="buddy_list_title">"Kontaktlista – <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
-    <string name="label_username">"Användarnamn:"</string>
-    <string name="ongoing_conversation">"Konversationer (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
-    <string name="contact_profile_title">"Kontaktinfo"</string>
-    <string name="presence_available">"Tillgänglig"</string>
-    <string name="add_contact_title">"Lägg till kontakt"</string>
-    <string name="input_contact_label">"Signatur för den du vill lägga till:"</string>
-    <string name="invite_label">"Lägg till kompis"</string>
+    <string name="menu_add_contact" msgid="1577617821180977339">"Lägg till kontakt"</string>
+    <string name="menu_remove_contact" msgid="1438737309746209943">"Ta bort kontakt"</string>
+    <string name="menu_block_contact" msgid="1418576909122458824">"Blockera"</string>
+    <string name="menu_contact_list" msgid="7408048984312793527">"Kontaktlista"</string>
+    <string name="menu_start_chat" msgid="1942461880426180926">"Skicka chattmeddelande"</string>
+    <string name="menu_view_profile" msgid="4594617426877626560">"Kompisinfo"</string>
+    <string name="menu_end_conversation" msgid="215067667186746690">"Avsluta konversation"</string>
+    <string name="menu_switch_chats" msgid="4616221788780459133">"Byt chatt"</string>
+    <string name="menu_insert_smiley" msgid="6880772056965363205">"Infoga uttryckssymboler"</string>
+    <string name="sign_up" msgid="3944276728278864333">"Öppna ett nytt konto"</string>
+    <string name="check_save_password" msgid="3554564072443242779">"Om din telefon blir stulen besöker du webbplatsen via datorn och ändrar lösenordet. Detta är för din egen säkerhet."</string>
+    <string name="buddy_list_title" msgid="5837732412636822107">"Kontaktlista – <xliff:g id="USERNAME">%1$s</xliff:g>"</string>
+    <string name="label_username" msgid="7905168188814604370">"Användarnamn:"</string>
+    <string name="ongoing_conversation" msgid="9097832769731811986">"Konversationer (<xliff:g id="NUMBER">%1$d</xliff:g>)"</string>
+    <string name="contact_profile_title" msgid="5203284525412697232">"Kontaktinfo"</string>
+    <string name="presence_available" msgid="1184051402868736726">"Tillgänglig"</string>
+    <string name="add_contact_title" msgid="292217657045373736">"Lägg till kontakt"</string>
+    <string name="input_contact_label" msgid="2583915568413164449">"Signatur för den du vill lägga till:"</string>
+    <string name="invite_label" msgid="907494221148096012">"Lägg till kompis"</string>
   <string-array name="smiley_names">
-    <item>"Glad"</item>
-    <item>"Ledsen"</item>
-    <item>"Blinkar"</item>
-    <item>"Lipar"</item>
-    <item>"Förvånad"</item>
-    <item>"Pussar"</item>
-    <item>"Skriker"</item>
-    <item>"Cool"</item>
-    <item>"Dollarmun"</item>
-    <item>"Bortgjord"</item>
-    <item>"Generad"</item>
-    <item>"Ängel"</item>
-    <item>"Tveksam"</item>
-    <item>"Gråter"</item>
-    <item>"Hemlis"</item>
-    <item>"Skrattar"</item>
-    <item>"Förvirrad"</item>
+    <item msgid="811476776139578986">"Glad"</item>
+    <item msgid="2764363456492352853">"Ledsen"</item>
+    <item msgid="416624764294712159">"Blinkar"</item>
+    <item msgid="7152979870122929989">"Lipar"</item>
+    <item msgid="5784780866600056743">"Förvånad"</item>
+    <item msgid="5454185003381226454">"Pussar"</item>
+    <item msgid="1413668617851210441">"Skriker"</item>
+    <item msgid="232246158381043538">"Cool"</item>
+    <item msgid="2440257511131202785">"Dollarmun"</item>
+    <item msgid="4571282940807190133">"Bortgjord"</item>
+    <item msgid="3260099163589753993">"Generad"</item>
+    <item msgid="3042531792218744865">"Ängel"</item>
+    <item msgid="5227319381647888452">"Tveksam"</item>
+    <item msgid="6952104030566994554">"Gråter"</item>
+    <item msgid="9199616532683270084">"Hemlis"</item>
+    <item msgid="4338502150254517147">"Skrattar"</item>
+    <item msgid="1014703928300075245">"Förvirrad"</item>
   </string-array>
   <string-array name="smiley_texts">
-    <item>":-)"</item>
-    <item>":-("</item>
-    <item>";-)"</item>
-    <item>":-P"</item>
-    <item>"=-O"</item>
-    <item>":-*"</item>
-    <item>":O"</item>
-    <item>"B-)"</item>
-    <item>":-$"</item>
-    <item>":-!"</item>
-    <item>":-["</item>
-    <item>"O:-)"</item>
-    <item>":-\\"</item>
-    <item>":\'("</item>
-    <item>":-X"</item>
-    <item>":-D"</item>
-    <item>"o_O"</item>
+    <item msgid="6682271134385564589">":-)"</item>
+    <item msgid="5242689844155076377">":-("</item>
+    <item msgid="521632995149320343">";-)"</item>
+    <item msgid="3442897533435789796">":-P"</item>
+    <item msgid="682698687423187022">"=-O"</item>
+    <item msgid="1531701168660725626">":-*"</item>
+    <item msgid="7958357467119008619">":O"</item>
+    <item msgid="4638775565490840154">"B-)"</item>
+    <item msgid="6225545209385623235">":-$"</item>
+    <item msgid="5725425598368680891">":-!"</item>
+    <item msgid="5365880622794795497">":-["</item>
+    <item msgid="8260692119195572132">"O:-)"</item>
+    <item msgid="6879285154649424413">":-\\"</item>
+    <item msgid="554517875650930417">":\'("</item>
+    <item msgid="8169228040168187510">":-X"</item>
+    <item msgid="5444890977206638254">":-D"</item>
+    <item msgid="8814856019116253585">"o_O"</item>
   </string-array>
 </resources>
